--- a/public/index.html
+++ b/public/index.html
@@ -13,27 +13,6 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <!-- <link rel="apple-touch-icon" sizes="57x57" href="./assets/fav/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="./assets/fav/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="./assets/fav/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="./assets/fav/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="./assets/fav/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="./assets/fav/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="./assets/fav/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="./assets/fav/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="./assets/fav/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="./assets/fav/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/fav/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="./assets/fav/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./assets/fav/favicon-16x16.png">
-  <link rel="manifest" href="/manifest.json">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffffff"> -->
-
-  <link rel="apple-touch-icon" sizes="180x180" href="./assets/fa/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/fa/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./assets/fa/favicon-16x16.png">
   <link rel="manifest" href="./assets/fa/site.webmanifest">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" >
     
@@ -47,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Greencontie</title>
+  <title>My App</title>
 </head>
 
 <body>
